--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.14.0
   syncfusion_flutter_gauges: ^22.1.37
   permission_handler: ^10.4.3
+  image_picker: ^1.0.1
+  firebase_storage: ^11.2.4
 
 
 
