--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   permission_handler: ^10.4.3
   image_picker: ^1.0.1
   firebase_storage: ^11.2.4
+  cached_network_image: ^3.2.3
+
 
 
 
