--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,10 +54,11 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
-  android: true
+flutter_launcher_icons:
+  android: "launcher_icon"
   ios: true
   image_path: "assets/logooo.png"
+  min_sdk_android: 21
     
 
   # The "flutter_lints" package below contains a set of recommended lints to
