--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.moneymate">
+    package="com.save.moneymate">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
    <application
         android:label="MoneyMate"
